--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
 
           <% if current_user.membership.role == "employee" %>
             <li class="nav-item">
-              <%= link_to "Apply loan", root_path, class: "nav-link" %>
+              <%= link_to "Apply loan", new_loan_path, class: "nav-link" %>
             </li>
           <% end %>
 
