--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,6 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
- *= require 'sweetalert/src/sweetalert'
+ * require 'sweetalert/src/sweetalert'
  *= require 'main'
  */
