--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<p>Find me ggg in app/views/home/index.html.erb</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus corporis harum explicabo dignissimos at rem, delectus, nobis nesciunt quasi quibusdam esse sit, aperiam fuga, illo molestias corrupti recusandae ratione! Eius.</p>
