wip basic layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,72 @@
-<h1>Home#index</h1>
-<p>Find me ggg in app/views/home/index.html.erb</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus corporis harum explicabo dignissimos at rem, delectus, nobis nesciunt quasi quibusdam esse sit, aperiam fuga, illo molestias corrupti recusandae ratione! Eius.</p>
+<div class="row flex-xl-nowrap">
+  <%= render 'shared/sidebar' %>
+  <div class="col-12 col-md-9 col-xl-10 py-md-3 pl-md-5 bd-content">
+    <h1>Home#index</h1>
+    <p>Find me ggg in app/views/home/index.html.erb</p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum voluptatem, voluptate molestiae consectetur, doloribus dolorem facilis provident consequuntur cum ad quam necessitatibus est nobis alias sapiente sint voluptatum illo sequi.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat in dicta, minima saepe quis culpa, voluptas commodi molestiae labore nostrum eius. Nam quibusdam a dolores deserunt sit quidem autem.
+    </p>
+  </div>
+</div>
