--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -47,6 +47,7 @@
 @import "bootstrap/scss/utilities";
 
 // Components
+@import "components/general.scss";
 @import "components/button.scss";
 
 // Pages
