--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,6 @@
       <% end %>
       <%= yield %>
     </div>
-    <%= render 'shared/footer' %>
+    <!-- <%= render 'shared/footer' %> -->
   </body>
 </html>
