--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -46,7 +46,8 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand navbar-dark flex-column flex-md-row kw-header">
+<!--  Navbar header -->
+<nav class="navbar navbar-expand navbar-light flex-column flex-md-row kw-header">
     <%= link_to "Paypay", root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -55,32 +56,25 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
+          <li class="nav-item">
             <%= link_to "Home", root_path, class: "nav-link" %>
           </li>
-          <% if current_user.membership.role == "admin" %>
-            <li class="nav-item">
-              <%= link_to "Company setting", new_setting_path, class: "nav-link" %>
-            </li>
-          <% end %>
-          <% if current_user.membership.role == "employee" %>
-            <li class="nav-item">
-              <%= link_to "Apply loan", new_loan_path, class: "nav-link" %>
-            </li>
-          <% end %>
         <% end %>
       </ul>
       <ul class="navbar-nav">
         <% if user_signed_in? %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                <a href="javascript:void();" class="dropdown-item"><%= current_user.try(:company).try(:name) || "No company" %></a>
-                <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-              </div>
-            </li>
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          </form>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+              <a href="javascript:void();" class="dropdown-item"><%= current_user.try(:company).try(:name) || "No company" %></a>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
+          </li>
         <% else %>
           <form class="form-inline">
             <li class="nav-item">
