styling login pages

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -52,6 +52,8 @@
 
 // Pages
 @import "pages/home.scss";
+@import "pages/integration.scss";
+@import "pages/login.scss";
 
 // Shared
 @import "shared/header.scss";
