--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -4,7 +4,7 @@
   position: -ms-sticky;
   position: -o-sticky;
   position: sticky;
-  min-height: 4rem;
+  height: 4rem;
   border-bottom: 1px solid rgba(0,0,0,.1);
   background-color: $white;
   top: 0;
