--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,59 +1,7 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="container">
-    <%= link_to "Paypay", root_path, class: "navbar-brand" %>
-
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
-          <% if current_user.membership.role == "admin" %>
-            <li class="nav-item">
-              <%= link_to "Company setting", new_setting_path, class: "nav-link" %>
-            </li>
-          <% end %>
-
-          <% if current_user.membership.role == "employee" %>
-            <li class="nav-item">
-              <%= link_to "Apply loan", new_loan_path, class: "nav-link" %>
-            </li>
-          <% end %>
-
-        <% end %>
-      </ul>
-      <ul class="navbar-nav">
-        <% if user_signed_in? %>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Options
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a href="javascript:void();" class="dropdown-item"><%= current_user.try(:company).try(:name) || "No company" %></a>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
 <!--  Navbar header -->
-<nav class="navbar navbar-expand navbar-light flex-column flex-md-row kw-header">
+<nav class="navbar navbar-light kw-header">
     <%= link_to "Paypay", root_path, class: "navbar-brand" %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarColor01">
+    <div class="">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
@@ -78,7 +26,10 @@
         <% else %>
           <form class="form-inline">
             <li class="nav-item">
-              <%= link_to "Login", new_user_session_path, class: "btn btn-outline-info my-2 my-sm-0" %>
+              <%= link_to "Login", new_user_session_path, class: "btn btn-link my-2 my-sm-0 mr-2" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Register", root_path, class: "btn btn-primary my-2 my-sm-0" %>
             </li>
           </form>
         <% end %>
