--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="col-12 col-md-3 col-xl-2 kw-sidebar py-md-4 px-md-3">
+<div class="col-12 col-md-3 col-xl-2 kw-sidebar py-md-4 px-md-3 d-none d-md-block">
   <nav class="kw-sidebar__menus">
     <%= link_to "Dashboard", root_path, class: "kw-sidebar__links kw-active" %>
     <% if user_signed_in? && current_user.membership.role == "admin" %>
@@ -7,8 +7,5 @@
     <% if user_signed_in? && current_user.membership.role == "employee" %>
       <%= link_to "Apply loan", new_loan_path, class: "kw-sidebar__links" %>
     <% end %>
-    <%= link_to "Broadcast", root_path, class: "kw-sidebar__links" %>
-    <%= link_to "Employee loan", root_path, class: "kw-sidebar__links" %>
-    <%= link_to "Settings", root_path, class: "kw-sidebar__links" %>
   </nav>
 </div>
