--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,12 @@
     <%= render 'shared/header' %>
     <div class="container-fluid">
       <% if notice.present? %>
-      <div class="alert alert-info alert-dismissible fade show" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <div class="alert alert-info alert-dismissible fade show kw-alert" role="alert">
         <%= notice %>
       </div>
       <% end %>
       <% if alert.present? %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <div class="alert alert-danger alert-dismissible fade show kw-alert" role="alert">
         <%= alert %>
       </div>
       <% end %>
@@ -34,3 +28,13 @@
     <!-- <%= render 'shared/footer' %> -->
   </body>
 </html>
+
+<script type="text/javascript">
+
+  window.setTimeout(function() {
+  	$(".kw-alert").fadeTo(200, 0).slideUp(200, function(){
+  		$(this).remove();
+  	});
+  }, 5000);
+
+</script>
