--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,9 @@
 <!--  Navbar header -->
-<nav class="navbar navbar-expand navbar-light flex-column flex-md-row kw-header justify-content-between">
+<nav class="navbar navbar-expand navbar-light flex-md-row kw-header justify-content-between">
     <%= link_to "Paypay", root_path, class: "navbar-brand" %>
     <div class="">
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Account
