--- a/app/views/loans/new.html.erb
+++ b/app/views/loans/new.html.erb
@@ -2,33 +2,39 @@
   <div class="row flex-xl-nowrap">
     <%= render 'shared/sidebar' %>
     <div class="col-12 col-md-9 col-xl-10 py-md-5 px-md-5 kw-home--content">
-      <!-- <h3 class="mb-5">Apply loan in KoinWorks</h3> -->
       <% if current_user.company.kw_integrated? %>
-        <%= form_tag loans_path, method: :post do %>
-          <div class="form-group">
-            <label for="">Loan Amount</label>
-            <%= text_field_tag :amount, params[:amount], class: "form-control" %>
-          </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <h3 class="my-4 mb-5">Apply loan in KoinWorks</h3>
+            <%= form_tag loans_path, method: :post do %>
+            <div class="form-group">
+              <label for="">Loan Amount</label>
+              <%= text_field_tag :amount, params[:amount], class: "form-control" %>
+            </div>
 
-          <div class="form-group text-left">
-            <label for="">Duration</label>
-            <select class="form-control" name="duration" id="duration">
-              <option value="6">6 Bulan</option>
-              <option value="12">12 Bulan</option>
-              <option value="24">24 Bulan</option>
-              <option value="26">36 Bulan</option>
-              <option value="48">48 Bulan</option>
-            </select>
-          </div>
+            <div class="form-group mb-4 text-left">
+              <label for="">Duration</label>
+              <select class="form-control" name="duration" id="duration">
+                <option value="6">6 Bulan</option>
+                <option value="12">12 Bulan</option>
+                <option value="24">24 Bulan</option>
+                <option value="26">36 Bulan</option>
+                <option value="48">48 Bulan</option>
+              </select>
+            </div>
 
-          <div class="form-check">
-            <label class="form-check-label">
-              <input type="checkbox" class="form-check-input">
-              I agree to term and condition provided by KoinWorks
-            </label>
+            <div class="form-check">
+              <label class="form-check-label">
+                <input type="checkbox" class="form-check-input">
+                I agree to term and condition provided by KoinWorks
+              </label>
+            </div>
+
+            <button type="submit" class="btn btn-primary my-4">Submit</button>
+
+            <% end %>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        <% end %>
+        </div>
       <% else %>
         <div class="kw-integration--done">
           <div class="kw-integration--done-content">
