fix phase one styling

--- a/app/assets/stylesheets/components/general.scss
+++ b/app/assets/stylesheets/components/general.scss
@@ -1,18 +1,10 @@
+// General
 body {
   margin: 0;
   font-size: 1rem;
   transition: all .5s;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  background-color: lighten(#F2F4F7, 3%);
   .form-control { border-radius: 3px; }
   .btn-link { min-width: auto; }
-}
-
-.kw-alert {
-  position: fixed;
-  top: 6px;
-  text-align: center;
-  z-index: 2;
-  left: 45%;
 }
