--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -49,6 +49,7 @@
 // Components
 @import "components/general.scss";
 @import "components/button.scss";
+@import "components/alert.scss";
 
 // Pages
 @import "pages/home.scss";
