--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,17 @@
     <%= render 'shared/header' %>
     <div class="container-fluid">
       <% if notice.present? %>
-      <div class="alert alert-info alert-dismissible fade show kw-alert" role="alert">
-        <%= notice %>
-      </div>
+        <div class="d-flex justify-content-center">
+          <div class="alert alert-info alert-dismissible fade show kw-alert" role="alert">
+            <%= notice %>
+          </div>
+        </div>
       <% end %>
       <% if alert.present? %>
-      <div class="alert alert-danger alert-dismissible fade show kw-alert" role="alert">
-        <%= alert %>
+      <div class="d-flex justify-content-center">
+        <div class="alert alert-danger alert-dismissible fade show kw-alert" role="alert">
+          <%= alert %>
+        </div>
       </div>
       <% end %>
       <%= yield %>
@@ -29,7 +33,7 @@
   </body>
 </html>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 
   window.setTimeout(function() {
   	$(".kw-alert").fadeTo(200, 0).slideUp(200, function(){
@@ -37,4 +41,4 @@
   	});
   }, 5000);
 
-</script>
+</script> -->
