set timeout alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   </body>
 </html>
 
-<!-- <script type="text/javascript">
+<script type="text/javascript">
 
   window.setTimeout(function() {
   	$(".kw-alert").fadeTo(200, 0).slideUp(200, function(){
@@ -41,4 +41,4 @@
   	});
   }, 5000);
 
-</script> -->
+</script>
