--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,10 +5,10 @@
       <div class="col-12 col-md-9 col-xl-10 py-md-5 px-md-5 kw-home--content">
         <h3 class="mb-5">Employee loan</h3>
 
-        <div class="card">
+        <div class="card mb-3">
           <div class="card-body">
-            <h4 class="card-title">Total Monthly Payment</h4>
-            <p class="card-text">Rp. 8.500.000,-</p>
+            <p class="card-title"><b>Total Monthly Payment</b></p>
+            <h4 class="card-text my-4">Rp. 8.500.000,-</h4>
             <p class="card-text">Next payment 5 November 2017</p>
           </div>
         </div>
@@ -63,7 +63,7 @@
       </table>
       </div>
     <% end %>
-    
+
     <% if user_signed_in? && current_user.membership.role == "employee" %>
       <div class="col-12 col-md-9 col-xl-10 py-md-5 px-md-5 kw-home--content">
         <h3 class="mb-4">My loan</h3>
