--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Resend confirmation instructions</h2>
+<div class="row justify-content-center">
+  <div class="kw-login--blank col-sm-12 col-md-6 col-lg-4">
+    <div class="kw-login--blank-content">
+      <div class="kw-login--blank-box">
+        <h4 class="my-4">Resend confirmation instructions</h4>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+          <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: 'form-control' %>
+          </div>
+
+          <div class="kw-login--action mb-5">
+            <%= f.submit "Resend confirmation instructions", class: 'btn btn-success' %>
+          </div>
+        <% end %>
+
+        <%= render "users/shared/links" %>
+
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
